# pelican-bispectrum

pelican/: CMakeLists.txt  modules.cmake
pelican/bispectrum/: CMakeLists.txt
pelican/bispectrum/bp/src/: OutputStreamExample.cpp  SignalAmplifier.cpp  SignalChunker.cpp  SignalData.cpp  SignalDataAdapter.cpp  SignalEmulator.cpp  SignalProcessingPipeline.cpp  mainEmulator.cpp  mainPipeline.cpp  mainServer.cpp
pelican/bispectrum/data/: serverConfig.xml
pelican/bispectrum/src/: OutputStreamExample.cpp  SignalAmplifier.cpp  SignalChunker.cpp  SignalData.cpp  SignalDataAdapter.cpp  SignalEmulator.cpp  SignalProcessingPipeline.cpp  mainEmulator.cpp  mainPipeline.cpp  mainServer.cpp
pelican/bispectrum/test/: CMakeLists.txt
